--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@devexpress/dx-react-core": "^3.0.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/montserrat": "^4.5.10",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
