--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.3",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
