--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^3.7.1",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
