--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/montserrat": "^4.5.10",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
+    "@mui/styles": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
