--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.2",
+    "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
